--- a/food/src/main/resources/application.properties
+++ b/food/src/main/resources/application.properties
@@ -1,9 +1,15 @@
+#connection properties
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
+#hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 server.port=8082
+
+
+management.endpoints.web.exposure.include=*
